// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`runtime, via crud_customer_create start idle 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": null,
    "instantiations": [],
    "root": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": null,
                },
              },
            ],
          },
          "description": null,
          "fields": {
            "edges": [
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Override Start Time",
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Override End Time",
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Description",
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Reason Code",
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "name": {
            "value": "Idle Time",
          },
          "parent": {
            "name": {
              "value": "My First Location",
            },
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": null,
          },
        },
        "transitions": {
          "edges": [],
        },
      },
      "state": {
        "__typename": "InProgress",
      },
    },
  },
}
`;

exports[`runtime, via crud_customer_create end idle 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": null,
    "instantiations": [],
    "root": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": null,
                },
              },
            ],
          },
          "description": null,
          "fields": {
            "edges": [
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Override Start Time",
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": "2024-09-08T19:31:45.364+00:00",
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Override End Time",
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Run Output",
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Reject Count",
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Comments",
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "name": {
            "value": "Run",
          },
          "parent": {
            "name": {
              "value": "My First Location",
            },
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": null,
          },
        },
        "transitions": {
          "edges": [
            {
              "node": {
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "value": "Override Start Time",
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "value": "Override End Time",
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "value": "Description",
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "value": "Reason Code",
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
                "name": {
                  "value": "Downtime",
                },
              },
              "target": {
                "name": {
                  "value": "My First Location",
                },
              },
            },
            {
              "node": {
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "value": "Override Start Time",
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "value": "Override End Time",
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "value": "Description",
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "value": "Reason Code",
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
                "name": {
                  "value": "Idle Time",
                },
              },
              "target": {
                "name": {
                  "value": "My First Location",
                },
              },
            },
          ],
        },
      },
      "state": {
        "__typename": "InProgress",
      },
    },
  },
}
`;

exports[`runtime, via crud_customer_create start downtime 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": null,
    "instantiations": [],
    "root": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": null,
                },
              },
            ],
          },
          "description": null,
          "fields": {
            "edges": [
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Override Start Time",
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Override End Time",
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Description",
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Reason Code",
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "name": {
            "value": "Downtime",
          },
          "parent": {
            "name": {
              "value": "My First Location",
            },
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": null,
          },
        },
        "transitions": {
          "edges": [],
        },
      },
      "state": {
        "__typename": "InProgress",
      },
    },
  },
}
`;

exports[`runtime, via crud_customer_create end downtime 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": null,
    "instantiations": [],
    "root": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": null,
                },
              },
            ],
          },
          "description": null,
          "fields": {
            "edges": [
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Override Start Time",
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": "2024-09-08T19:31:45.364+00:00",
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Override End Time",
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Run Output",
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Reject Count",
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Comments",
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "name": {
            "value": "Run",
          },
          "parent": {
            "name": {
              "value": "My First Location",
            },
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": null,
          },
        },
        "transitions": {
          "edges": [
            {
              "node": {
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "value": "Override Start Time",
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "value": "Override End Time",
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "value": "Description",
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "value": "Reason Code",
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
                "name": {
                  "value": "Downtime",
                },
              },
              "target": {
                "name": {
                  "value": "My First Location",
                },
              },
            },
            {
              "node": {
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "value": "Override Start Time",
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "value": "Override End Time",
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "value": "Description",
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "value": "Reason Code",
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
                "name": {
                  "value": "Idle Time",
                },
              },
              "target": {
                "name": {
                  "value": "My First Location",
                },
              },
            },
          ],
        },
      },
      "state": {
        "__typename": "InProgress",
      },
    },
  },
}
`;

exports[`runtime, via crud_customer_create end run 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": [
      {
        "__typename": "Diagnostic",
        "code": "no_associated_fsm",
      },
    ],
    "instantiations": [],
  },
}
`;

exports[`runtime, via crud_customer_create apply field edits retroactively 1`] = `
{
  "applyFieldEdits": {
    "__typename": "Task",
    "fields": {
      "__typename": "FieldConnection",
      "edges": [
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "value": "Override Start Time",
            },
            "value": {
              "__typename": "TimestampValue",
              "timestamp": "2024-09-08T19:31:45.364+00:00",
            },
            "valueType": "timestamp",
          },
        },
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "value": "Override End Time",
            },
            "value": {
              "__typename": "TimestampValue",
              "timestamp": "2024-09-09T19:31:45.364+00:00",
            },
            "valueType": "timestamp",
          },
        },
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "value": "Run Output",
            },
            "value": {
              "__typename": "NumberValue",
            },
            "valueType": "number",
          },
        },
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "value": "Reject Count",
            },
            "value": {
              "__typename": "NumberValue",
            },
            "valueType": "number",
          },
        },
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "value": "Comments",
            },
            "value": {
              "__typename": "StringValue",
              "string": "Don't mind me! Just leaving a comment :)",
            },
            "valueType": "string",
          },
        },
      ],
    },
  },
}
`;
